--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
