--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.46.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
@@ -33,11 +35,14 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.2.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.33",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vitest": "^1.0.4",
