--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^1.0.14",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
