--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@crxjs/vite-plugin": "^1.0.14",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/chrome": "^0.0.256",
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.19.3",
